--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -8,25 +8,17 @@
 </head>
 <body>
     <h1>Lista de Productos</h1>
-    <ul id="product-list"></ul>
+    <ul id="product-list">
+        {{#if payload}}
+        {{#each payload}}
+            <li><p>Producto: {{this.title}} - Precio: {{this.price}} - Categoria: {{this.category}} - Descripcion: {{description}} - Disponibles: {{stock}}</p></li>
+        {{/each}}
+        {{else}}
+        <p>No hay productos disponibles.</p>
+        {{/if}}
+    </ul>
 
-    <script>
-        const socket = io();
-
-        function renderProducts(products) {
-            const productList = document.getElementById('product-list');
-            productList.innerHTML = '';
-            products.forEach(product => {
-                const li = document.createElement('li');
-                li.textContent = `${product.id} - ${product.title} - ${product.category} - ${product.description} - $${product.price}`;
-                productList.appendChild(li);
-            });
-        }
-
-        socket.on('updateProducts', (products) => {
-            renderProducts(products);
-        });
-    </script>
+    
 </body>
 </html>
 
