--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -36,7 +36,18 @@
     </div>
     
     <h2>Carritos Disponibles</h2>
-    <ul id="cart-list"></ul>
+    <ul id="cart-list">
+        {{#if cart}}
+        {{#each cart}}
+        <li>
+            <p>Carrito ID: {{this._id}} Productos: {{this.products}}</p>
+
+            <button onclick="emptyCart('{{this._id}}')">Vaciar Carrito</button>
+            <button onclick="deleteCart('{{this._id}}')">Eliminar Carrito</button>
+        </li>
+        {{/each}}
+        {{/if}}
+    </ul>
 
     <button id="crearCartButton">Crear Carrito</button>
 </body>
