Agrego hasta clase 4

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -7,3 +7,4 @@
     <button type="submit">Ingresar</button>
 </form>
 <a href="/register">Registrarse</a>
+<a href="/reset-password">Cambiar Contraseña</a>
