--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -3,6 +3,8 @@
 <p>Apellido: {{last_name}}</p>
 <p>Email: {{email}}</p>
 <p>Edad: {{age}}</p>
+
+<a href="/reset-password">Cambiar Contraseña</a>
 <form action="/api/sessions/logout" method="POST">
     <button type="submit">Cerrar Sesión</button>
 </form>
