--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,4 +1,4 @@
-<h2>Iniciar Sesión</h2>
+{{!--<h2>Iniciar Sesión</h2>
 <form action="/api/sessions/login" method="POST">
     <label for="email">Email:</label>
     <input type="email" name="email" required>
@@ -7,4 +7,8 @@
     <button type="submit">Ingresar</button>
 </form>
 <a href="/register">Registrarse</a>
-<a href="/reset-password">Cambiar Contraseña</a>
+<a href="/reset-password">Cambiar Contraseña</a> --}}
+
+<div>
+    <a href="/api/sessions/github"> <button>Ingresar con Github</button></a>
+</div>
