Agregamos casi todo para entrega

--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -3,6 +3,7 @@
 <p>Apellido: {{user.last_name}}</p>
 <p>Email: {{user.email}}</p>
 <p>Edad: {{user.age}}</p>
+<p>Role: {{user.role}}</p>
 
 <a href="/reset-password">Cambiar Contraseña</a>
 <form action="/api/sessions/logout" method="POST">
