--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -8,8 +8,11 @@
     <input type="email" name="email" required>
     <label for="age">Edad:</label>
     <input type="number" name="age" required>
+    <label for="role">Role:</label>
+    <input type="text" name="role">
     <label for="password">Contraseña:</label>
     <input type="password" name="password" required>
     <button type="submit">Registrarse</button>
 </form>
 <a href="/login">Iniciar sesión</a>
+<a href="/reset-password">Restablecer contraseña</a>
