--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -1,4 +1,6 @@
 <h2>Perfil de Usuario</h2>
+
+{{#if user}}
 <p>Nombre: {{user.first_name}}</p>
 <p>Apellido: {{user.last_name}}</p>
 <p>Email: {{user.email}}</p>
@@ -9,3 +11,4 @@
 <form action="/api/sessions/logout" method="POST">
     <button type="submit">Cerrar Sesión</button>
 </form>
+{{/if}}
